--- a/WPP/WinHello/WinHello/WinHello.vcproj
+++ b/WPP/WinHello/WinHello/WinHello.vcproj
@@ -181,6 +181,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\SysMets.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
