add duilib practice project;

--- a/DuiPractice/DuiPractice/DuiPractice.vcxproj
+++ b/DuiPractice/DuiPractice/DuiPractice.vcxproj
@@ -66,10 +66,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="LoginWindow.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="LoginWindow.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="stdafx.cpp" />
