--- a/cygwin/.inputrc
+++ b/cygwin/.inputrc
@@ -46,6 +46,7 @@ set meta-flag on
 set convert-meta off
 set input-meta on
 set output-meta on
+set completion-ignore-case on
 #$if Bash
   # Don't ring bell on completion
   #set bell-style none
